--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2155,3 +2155,20 @@ ol.toc {
 .highlight .code .selector-id {
   font-weight: bold;
 }
+.chip {
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: #f1f1f1;
+}
+
+.chip img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
