Added external links to profile section
- Links will be rendered when [[params.side]] is specified in the
  config.toml file

--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -31,6 +31,16 @@
         </span>
       </div>
     </div>
+    <div class="base-info profile-block">
+      <h2 id="title">External Links</h2>
+      <p>
+      <ul align="center">
+          {{ range .Site.Params.side }}
+          <li><a href="{{ .link | absURL }}" target="_blank" title="JC">{{ .label }}</i></a></li>
+          {{ end }}
+      </ul>
+       </p>
+    </div>
     <div class="profile-block social-links">
       <table>
         <tr>
