Added people functionality
- added css styles that were previously located in the main repository
- fix alignment bug
- improve responsive design of the people list
- add some hover animations

--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -36,7 +36,7 @@
       <p>
       <ul align="center">
           {{ range .Site.Params.side }}
-          <li><a href="{{ .link | absURL }}" target="_blank" title="JC">{{ .label }}</i></a></li>
+          <li><a href="{{ .link | absURL }}" target="_blank" title="External Link">{{ .label }}</i></a></li>
           {{ end }}
       </ul>
        </p>
