--- a/layouts/partials/people.html
+++ b/layouts/partials/people.html
@@ -1,6 +1,10 @@
 
 <article class="article article-type-post" itemscope="" itemprop="blogPost">
     <div class="article-inner">
+        {{ if and (isset .Params "banner") (not (eq .Params.banner "")) }}
+            <img src="{{ .Params.banner | absURL }}" class="article-banner">
+        {{ end }}
+
         {{partial "article_header" .}}
         <div class="article-entry" itemprop="articleBody">
             {{ .Content }}
